# auth-service

./: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2026-06-10_init.py  2026-06-10_seed_initial_data.py
app/: config.py  database.py  main.py  models.py
app/auth/: jwt.py
