[project]
name = "auth-service"
version = "0.1.0"
description = "Service for authentication and authorization"
requires-python = ">=3.14"
dependencies = [
    "alembic==1.18.4",
    "bcrypt==5.0.0",
    "fastapi==0.136.3",
    "httpx==0.28.1",
    "psycopg[binary]==3.3.4",
    "pydantic-settings==2.14.1",
    "pyjwt==2.13.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "sqlalchemy[asyncio]==2.0.50",
    "uvicorn[standard]==0.49.0",
]
